--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtorder.xhtml
@@ -1,15 +1,17 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <c:set var="import" value="templateuser.xhtml"/>
     <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
         <c:set var="import" value="templateadmin.xhtml"/>
     </c:if>
     <ui:composition template="${root}/templates/${import}">
-        <ui:param name="pageName" value="TMS home" />
+        <ui:param name="pageName" value="WMS home" />
 
         <ui:define name="more-imports">
             <ui:insert>
@@ -19,7 +21,7 @@
         </ui:define>
 
 
-        <ui:define name="left">
+       <ui:define name="left">
             <p:menu>
                 <p:submenu label ="Map">
                     <p:submenu label="Node" >
@@ -32,10 +34,10 @@
                     </p:submenu>
                 </p:submenu>
                 <p:submenu label =" Manage Your Transportation">
-                    <p:menuitem value="TMS Home" url="tmsindex.xhtml"  style="background-color: lavender"/>
+                    <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
                 </p:submenu>
                 <p:submenu label="Location" >
-                    <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
+                    <p:menuitem value="Add A Location" url="addnewlocation.xhtml" style="background-color: lavender"/>
                     <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
                 </p:submenu>
                 <p:submenu label="Transportation Asset" >
@@ -73,31 +75,3 @@
 
             </p:menu>
         </ui:define>
-
-        <ui:define name="right">
-
-            <div class="system-banner tms-system-banner"></div>
-
-
-            <h2 class="system-welcome">Welcome to Transportation Management System!</h2>
-
-            <div class="system-description">
-                Optimize your planning, scheduling, tracking and movement of goods today and deliver excellent services to your customers with our TMS system!<br></br><br></br>
-
-
-                Benefits of TMS<br></br>
-
-                -Efficiently manage all your transportation assets<br></br>
-                -Have a bird’s eye view of all your shipments<br></br>
-                -Manage and process requests for transportation services<br></br>
-                -Find the best route to deliver your products with our unique route optimization function<br></br>
-                -Achieve efficient scheduling of manpower<br></br>
-
-
-                <Br/><Br/>
-
-            </div>
-        </ui:define>
-
-    </ui:composition>
-</html>
