--- a/MerlionPortal/MerlionPortal-war/web/tms/viewallroute.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewallroute.xhtml
@@ -1,17 +1,17 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <c:set var="import" value="templateuser.xhtml"/>
     <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
         <c:set var="import" value="templateadmin.xhtml"/>
     </c:if>
     <ui:composition template="${root}/templates/${import}">
-        <ui:param name="pageName" value="WMS home" />
+        <ui:param name="pageName" value="TMS home" />
 
         <ui:define name="more-imports">
             <ui:insert>
@@ -30,14 +30,14 @@
                     </p:submenu>
                     <p:submenu label="Route" >
                         <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
-                        <p:menuitem value="View All Routes" url="viewallroute.xhtml"/>
+                        <p:menuitem value="View All Routes" url="viewallroute.xhtml" style="background-color: lavender"/>
                     </p:submenu>
                 </p:submenu>
                 <p:submenu label =" Manage Your Transportation">
                     <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
                 </p:submenu>
                 <p:submenu label="Location" >
-                    <p:menuitem value="Add A Location" url="addnewlocation.xhtml" style="background-color: lavender"/>
+                    <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
                     <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
                 </p:submenu>
                 <p:submenu label="Transportation Asset" >
@@ -78,8 +78,7 @@
         <ui:define name="right">       
             <h:form id="formMain">
 
-                <br/>
-                <p:panel id="panel" header="Add Schedule">
+                <p:panel id="panel" header=" View Route for Node">
                     <p:ajaxStatus style="width:16px;height:16px;">
                         <f:facet name="start">
                             <h:graphicImage value="/img/load.gif" />
@@ -89,51 +88,64 @@
                         </f:facet>
                     </p:ajaxStatus>
                     <p:panelGrid>
-
                         <p:row>
                             <p:column>
-                                <p:outputLabel for="location" value="location Name: " />
+                                <p:outputLabel for="node" value="Node Name: " />
                             </p:column>
                             <p:column>
-                                <p:selectOneMenu id="location" value="#{tAssetScheduleManagerBean.locationId}"  style="width:300px" required="true" requiredMessage="Please select a Location">
-                                    <p:ajax listener="#{tAssetScheduleManagerBean.onChangeLocation()}" update="tasset" />
-                                    <f:selectItem itemLabel="Select location" itemValue="" noSelectionOption="true" />
-                                    <f:selectItems value="#{tAssetScheduleManagerBean.locations}" var="location" itemLabel="ID:#{location.locationId} Name:#{location.locationName}"  itemValue="#{location.locationId}"/>
+                                <p:selectOneMenu id="node" value="#{routeViewEditManagedBean.nodeId}"  style="width:300px" required="true" requiredMessage="Please select a Origin">
+                                    <p:ajax listener="#{routeViewEditManagedBean.onNodeChange()}" update="routeData" />
+                                    <f:selectItem itemLabel="Select Node" itemValue="" noSelectionOption="true" />
+                                    <f:selectItems value="#{routeViewEditManagedBean.nodes}" var="node" itemLabel="ID:#{node.nodeId} Name:#{node.locationName}"  itemValue="#{node.nodeId}"/>
                                 </p:selectOneMenu>
                             </p:column>
                         </p:row>
-                        <p:row>
-                            <p:column>
-                                <p:outputLabel for="tasset" value="Transportation Asset Id: " />
-                            </p:column>
-                            <p:column>
-                                <p:selectOneMenu id="tasset" value="#{tAssetScheduleManagerBean.tassetId}"  style="width:300px" required="true" requiredMessage="Please select a Transportation Asset">
-                                    <f:selectItem itemLabel="Select Transportation Asset" itemValue="" noSelectionOption="true" />
-                                    <f:selectItems value="#{tAssetScheduleManagerBean.transassetss}" var="tasset" itemLabel="ID:#{tasset.assetId} Type:#{tasset.assetType}"  itemValue="#{tasset.assetId}"/>
-                                </p:selectOneMenu>
-                            </p:column>
-                        </p:row>
-                        <p:row>
-                            <p:column>
-                                <p:outputLabel for="startDate" value="Start Date " /><p:spacer width="20" height="20" /></p:column>
-                            <p:column>
-                                <p:calendar id="startDate" required="true" requiredMessage="Start Date is required" value="#{tAssetScheduleManagerBean.startDate}" pattern="dd-MM-yyyy" mask="true" mindate="#{tAssetScheduleManagerBean.today}" />
-                            </p:column>
-                        </p:row>
-                        <p:row>
-
-                            <p:column> 
-                                <p:outputLabel for="endDate" value="End Date " /><p:spacer width="20" height="20" /></p:column>
-                            <p:column>
-                                <p:calendar id="endDate" required="true" requiredMessage="End Date is required" value="#{tAssetScheduleManagerBean.endDate}" pattern="dd-MM-yyyy" mask="true" mindate="#{tAssetScheduleManagerBean.startDate}" />                                   
-
-                            </p:column>
-                        </p:row>  
                     </p:panelGrid>
-                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                    <p:commandButton id="btn" value="Create New Transportation Schedule" update="panel" action="#{tAssetScheduleManagerBean.createTassetSchedule}" ajax="true" />
-                </p:panel>
 
+                    <p:dataTable id="routeData" var="route" sortMode="multiple" editable="true" value="#{routeViewEditManagedBean.routes}" 
+                                 widgetVar="routeTable"
+                                 emptyMessage="No Route found"
+                                 rowKey="#{route.routeId}">
+
+                        <p:column headerText="Route Id" >
+                            <h:outputText value="#{route.routeId}" />
+                        </p:column>
+
+                        <p:column  filterBy="#{route.routeType}" filterMatchMode="contains" headerText="Route Type">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{route.routeType}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{route.routeType}" style="width:100%" label="Asset Type"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>                
+
+                       <p:column  filterBy="#{route.destination}" filterMatchMode="contains" headerText="Destination">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{route.destination}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{route.destination}" style="width:100%" label="Price"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
+
+
+                        <p:column  headerText="Distance">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{route.distance} km" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{route.distance}" style="width:100%" label="Speed"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
+
+                        <p:column headerText = "Delete Route">
+                            <p:commandButton action="#{routeViewEditManagedBean.deleteRoute(route)}" update="routeData" value="Delete">
+                                <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this Route?" icon="ui-icon-alert" />
+                            </p:commandButton> 
+                            <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                                <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                                <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                            </p:confirmDialog>
+                        </p:column>
+
+                    </p:dataTable>
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                </p:panel>
             </h:form>
         </ui:define>
     </ui:composition>
