--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
@@ -19,24 +19,60 @@
             </ui:insert>
         </ui:define>
         
+       <ui:define name="left">
+            <p:menu>
+                <p:submenu label ="Map">
+                    <p:submenu label="Node" >
+                        <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
+                        <p:menuitem value="View All Nodes" url="viewallnode.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Route" >
+                        <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
+                        <p:menuitem value="View All Routes" url="viewallroute.xhtml"/>
+                    </p:submenu>
+                </p:submenu>
+                <p:submenu label =" Manage Your Transportation">
+                    <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
+                </p:submenu>
+                <p:submenu label="Location" >
+                    <p:menuitem value="Add A Location" url="addnewlocation.xhtml" style="background-color: lavender"/>
+                    <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Transportation Asset" >
+                    <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
+                    <p:menuitem value="View Transportation Assets" url="viewalltasset.xhtml" />
+                </p:submenu>
+                <p:submenu label="Asset Schedule" >
+                    <p:menuitem value="Add A Asset Schedule" url="addnewtassetschedule.xhtml" />
+                    <p:menuitem value="View All Schedule" url="viewalltassetschedule.xhtml" />
+                </p:submenu>
 
-        <ui:define name="left">
-                    <p:panelMenu>
-                        <p:submenu label =" Manage Your Transportation">
-                            <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
-                            <p:submenu label="Location" >
-                                <p:menuitem value="Add A Location" url="addnewlocation.xhtml" />
-                                <p:menuitem value="View All Locations" url="viewalllocation.xhtml" />
-                            </p:submenu>
-                            <p:submenu label="Transportation Asset" >
-                                <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
-                                <p:menuitem value="View Transportation Assets" url="viewalltasset.xhtml" style="background-color: lavender" />
-                            </p:submenu>
- 
-                        </p:submenu>
-                    </p:panelMenu>
+                <p:submenu label="Maintenance" >
+                    <p:menuitem value="Create Maintenance" url="addnewmaintenancelog.xhtml"  />
+                    <p:menuitem value="View All Maintenance" url="viewallmaintenancelog.xhtml" />
+                </p:submenu>
+                <p:submenu label="Operator" >
+                    <p:menuitem value="Add A Operator" url="addnewoperator.xhtml"  />
+                    <p:menuitem value="View All Operator" url="viewalloperator.xhtml" />
+                </p:submenu>
+                <p:submenu label="Operator Schedule" >
+                    <p:menuitem value="Add A Operator Schedule" url="addnewoperatorschedule.xhtml" />
+                    <p:menuitem value="View All Operator Schedule" url="viewalloperatorschedule.xhtml" />
+                </p:submenu>
+
+                <p:submenu label="Transportation Order" >
+                    <p:menuitem value="Create Transportation Order" url="addnewtorder.xhtml" />
+                    <p:menuitem value="View All Orders" url="viewalltorder.xhtml" />
+                    <p:menuitem value="View Order Details" url="viewalltorder.xhtml"/>
+                </p:submenu>
+
+                <p:submenu label="Transportation Request" >
+                    <p:menuitem value="Create A Transportation Request" url="addnewrequest.xhtml" />
+                    <p:menuitem value="View All Request" url="viewallrequest.xhtml" />
+                </p:submenu>
+
+            </p:menu>
         </ui:define>
-        
          <ui:define name="right">       
             <h:form id="formMain">
 
@@ -79,9 +115,6 @@
                     <p:ajax event="rowEdit" listener="#{TTassetViewEditManagedBean.onRowEdit}"/>
                     <p:ajax event="rowEditCancel" listener="#{TTassetViewEditManagedBean.onRowCancel}"/>                
 
-                    <p:column headerText="Location Id" >
-                        <h:outputText value="#{tAsset.locationlocationId.locationId}" />
-                    </p:column>
 
                     <p:column filterBy="#{tAsset.assetId}" filterMatchMode="exact" headerText="TAsset ID" >
                         <h:outputText value="#{tAsset.assetId}" />
