--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltassetschedule.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltassetschedule.xhtml
@@ -1,128 +1,173 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>View All Schedule</title>
-        <style type="text/css">
-            .gritter-notice-wrapper {
-                left:200px;
-                top: 50px;
-            }
-        </style>
-    </h:head>
-    <h:body>
-            <h:form id="formMain">
-            <h1>Welcome to Transportation Management System</h1>
-              <p:menubar>
-                <p:menuitem value="TMS Home" url="tmsindex.xhtml"/>
+<html  xmlns="http://www.w3.org/1999/xhtml"
+       xmlns:h="http://xmlns.jcp.org/jsf/html"
+       xmlns:p="http://primefaces.org/ui"
+       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+       xmlns:f="http://xmlns.jcp.org/jsf/core"
+       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+    <c:set var="import" value="templateuser.xhtml"/>
+    <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
+        <c:set var="import" value="templateadmin.xhtml"/>
+    </c:if>
+    <ui:composition template="${root}/templates/${import}">
+        <ui:param name="pageName" value="View Assset Schedule" />
 
+        <ui:define name="more-imports">
+            <ui:insert>
+                <!--                import CSS style or Javascript here, if any-->
+            </ui:insert>
+        </ui:define>
+
+        <ui:define name="left">
+            <p:menu>
+                <p:submenu label ="Map">
+                    <p:submenu label="Node" >
+                        <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
+                        <p:menuitem value="View All Nodes" url="viewallnode.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Route" >
+                        <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
+                        <p:menuitem value="View All Routes" url="viewallroute.xhtml"/>
+                    </p:submenu>
+                </p:submenu>
+                <p:submenu label =" Manage Your Transportation">
+                    <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
+                </p:submenu>
                 <p:submenu label="Location" >
-                    <p:menuitem value="Add New Location" url="addnewlocation.xhtml" />
-                    <p:menuitem value="View All locations" url="viewalllocation.xhtml" />
+                    <p:menuitem value="Add A Location" url="addnewlocation.xhtml" style="background-color: lavender"/>
+                    <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
                 </p:submenu>
                 <p:submenu label="Transportation Asset" >
-                    <p:menuitem value="Add Transportation Asset" url="addnewtasset.xhtml" />
+                    <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
                     <p:menuitem value="View Transportation Assets" url="viewalltasset.xhtml" />
                 </p:submenu>
-<!--                <p:submenu label="TAsset Schedule" >
-                    <p:menuitem value="Add TAsset Schedule" url="addnewtassetschedule.xhtml" />
-                    <p:menuitem value="View TAsset Schedule" url="viewalltassetschedule.xhtml" />
-                </p:submenu>-->
-            </p:menubar>
- 
-            <br/>
-            <p:panel id="panel" header=" View Transportation Assets for A Location">
-                <p:ajaxStatus style="width:16px;height:16px;">
-                    <f:facet name="start">
-                        <h:graphicImage value="/img/load.gif" />
-                    </f:facet>
-                    <f:facet name="complete">
-                        <h:outputText value="" />
-                    </f:facet>
-                </p:ajaxStatus>
-                <p:panelGrid>
-                    <p:row>
-                        <p:column>
-                            <p:outputLabel for="location" value="location Name: " />
+                <p:submenu label="Asset Schedule" >
+                    <p:menuitem value="Add A Asset Schedule" url="addnewtassetschedule.xhtml" />
+                    <p:menuitem value="View All Schedule" url="viewalltassetschedule.xhtml" />
+                </p:submenu>
+
+                <p:submenu label="Maintenance" >
+                    <p:menuitem value="Create Maintenance" url="addnewmaintenancelog.xhtml"  />
+                    <p:menuitem value="View All Maintenance" url="viewallmaintenancelog.xhtml" />
+                </p:submenu>
+                <p:submenu label="Operator" >
+                    <p:menuitem value="Add A Operator" url="addnewoperator.xhtml"  />
+                    <p:menuitem value="View All Operator" url="viewalloperator.xhtml" />
+                </p:submenu>
+                <p:submenu label="Operator Schedule" >
+                    <p:menuitem value="Add A Operator Schedule" url="addnewoperatorschedule.xhtml" />
+                    <p:menuitem value="View All Operator Schedule" url="viewalloperatorschedule.xhtml" />
+                </p:submenu>
+
+                <p:submenu label="Transportation Order" >
+                    <p:menuitem value="Create Transportation Order" url="addnewtorder.xhtml" />
+                    <p:menuitem value="View All Orders" url="viewalltorder.xhtml" />
+                    <p:menuitem value="View Order Details" url="viewalltorder.xhtml"/>
+                </p:submenu>
+
+                <p:submenu label="Transportation Request" >
+                    <p:menuitem value="Create A Transportation Request" url="addnewrequest.xhtml" />
+                    <p:menuitem value="View All Request" url="viewallrequest.xhtml" />
+                </p:submenu>
+
+            </p:menu>
+        </ui:define>
+        <ui:define name="right">       
+            <h:form id="formMain">
+                <br/>
+                <p:panel id="panel" header=" View Transportation Assets for A Location">
+                    <p:ajaxStatus style="width:16px;height:16px;">
+                        <f:facet name="start">
+                            <h:graphicImage value="/img/load.gif" />
+                        </f:facet>
+                        <f:facet name="complete">
+                            <h:outputText value="" />
+                        </f:facet>
+                    </p:ajaxStatus>
+                    <p:panelGrid>
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="location" value="location Name: " />
+                            </p:column>
+                            <p:column>
+                                <p:selectOneMenu id="location" value="#{tAssetScheduleViewEditManagedBean.locationId}"  style="width:300px" required="true" requiredMessage="Please select a Location">
+                                    <p:ajax listener="#{tAssetScheduleViewEditManagedBean.onLocationChange}" update="tAsset" />
+                                    <f:selectItem itemLabel="Select location" itemValue="" noSelectionOption="true" />
+                                    <f:selectItems value="#{tAssetScheduleViewEditManagedBean.locations}" var="location" itemLabel="ID:#{location.locationId} Name:#{location.locationName}"  itemValue="#{location.locationId}"/>
+                                </p:selectOneMenu>
+                            </p:column>
+                        </p:row>
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="tAsset" value="Transportation Asset Type: " />
+                            </p:column>
+                            <p:column>
+                                <p:selectOneMenu id="tAsset" value="#{tAssetScheduleViewEditManagedBean.tassetid}"  style="width:300px" required="true" requiredMessage="Please select a Transportation Asset">
+                                    <p:ajax listener="#{tAssetScheduleViewEditManagedBean.onTAssetChange}" update="scheduleData" />
+                                    <f:selectItem itemLabel="Select Transportation Asset" itemValue="" noSelectionOption="true" />
+                                    <f:selectItems value="#{tAssetScheduleViewEditManagedBean.tassetss}" var="tAsset" itemLabel="ID:#{tAsset.assetId} Name:#{tAsset.assetType}"  itemValue="#{tAsset.assetId}"/>
+                                </p:selectOneMenu>
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>
+
+                    <p:dataTable id="scheduleData" var="schedule" sortMode="multiple" editable="true" value="#{tAssetScheduleViewEditManagedBean.schedules}" 
+                                 widgetVar="scheduleTable"
+                                 emptyMessage="No schedule found"
+                                 rowKey="#{schedule.scheduleId}">
+
+                        <f:facet name="header">                    
+                            <p:outputPanel>
+                                <h:outputText value="Search Schedule fields:" />
+                                <p:inputText id="globalFilter" onkeyup="PF('scheduleTable').filter()" />
+                            </p:outputPanel>
+                        </f:facet>
+
+                        <p:ajax event="rowEdit" listener="#{tAssetScheduleViewEditManagedBean.onRowEdit}"/>
+                        <p:ajax event="rowEditCancel" listener="#{tAssetScheduleViewEditManagedBean.onRowCancel}"/>                
+
+                        <p:column filterBy="#{schedule.scheduleId}" filterMatchMode="exact" headerText="Schedule ID" >
+                            <h:outputText value="#{schedule.scheduleId}" />
                         </p:column>
-                        <p:column>
-                            <p:selectOneMenu id="location" value="#{tAssetScheduleViewEditManagedBean.locationId}"  style="width:300px" required="true" requiredMessage="Please select a Location">
-                                <p:ajax listener="#{tAssetScheduleViewEditManagedBean.onLocationChange}" update="location" />
-                                <f:selectItem itemLabel="Select location" itemValue="" noSelectionOption="true" />
-                                <f:selectItems value="#{tAssetScheduleViewEditManagedBean.locations}" var="location" itemLabel="ID:#{location.locationId} Name:#{location.locationName}"  itemValue="#{location.locationId}"/>
-                            </p:selectOneMenu>
+
+                        <p:column  headerText="startDate" filterBy="#{schedule.startDate}" filterMatchMode="contains">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{schedule.startDate}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{sschedule.startDate}" style="width:100%" label="Description"/></f:facet>
+                            </p:cellEditor>
                         </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column>
-                            <p:outputLabel for="tAsset" value="Transportation Asset Type: " />
+
+                        <p:column  headerText="endDate" filterBy="#{schedule.endDate}" filterMatchMode="contains">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{schedule.endDate}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{schedule.endDate}" style="width:100%" label="Bin Type"/></f:facet>
+                            </p:cellEditor>
                         </p:column>
-                        <p:column>
-                            <p:selectOneMenu id="tAsset" value="#{tAssetScheduleViewEditManagedBean.tassetid}"  style="width:300px" required="true" requiredMessage="Please select a Transportation Asset">
-                                <p:ajax listener="#{tAssetScheduleViewEditManagedBean.onTAssetChange}" update="tAsset" />
-                                <f:selectItem itemLabel="Select Transportation Asset" itemValue="" noSelectionOption="true" />
-                                <f:selectItems value="#{tAssetScheduleViewEditManagedBean.tassetss}" var="tAsset" itemLabel="ID:#{tAsset.assetId} Name:#{tAsset.assetType}"  itemValue="#{tAsset.assetId}"/>
-                            </p:selectOneMenu>
+
+
+
+                        <p:column headerText = "Delete Schedule">
+                            <p:commandButton action="#{tAssetScheduleViewEditManagedBean.deleteAssetSchedule(schedule)}" update="scheduleData" value="Delete"  >
+                                <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this schedule?" icon="ui-icon-alert" />
+                            </p:commandButton> 
+                            <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                                <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                                <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                            </p:confirmDialog>
                         </p:column>
-                    </p:row>
-                </p:panelGrid>
 
-                <p:dataTable id="scheduleData" var="schedule" sortMode="multiple" editable="true" value="#{tAssetScheduleViewEditManagedBean.schedules}" 
-                             widgetVar="scheduleTable"
-                             emptyMessage="No schedule found"
-                             rowKey="#{schedule.scheduleId}">
+                        <p:column style="width:32px">
+                            <p:rowEditor />
+                        </p:column>
 
-                    <f:facet name="header">                    
-                        <p:outputPanel>
-                            <h:outputText value="Search Schedule fields:" />
-                            <p:inputText id="globalFilter" onkeyup="PF('scheduleTable').filter()" />
-                        </p:outputPanel>
-                    </f:facet>
+                    </p:dataTable>
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                </p:panel>
 
-                    <p:ajax event="rowEdit" listener="#{tAssetScheduleViewEditManagedBean.onRowEdit}"/>
-                    <p:ajax event="rowEditCancel" listener="#{tAssetScheduleViewEditManagedBean.onRowCancel}"/>                
+            </h:form>
+        </ui:define>
+    </ui:composition>
+</html>                        
 
-                    <p:column filterBy="#{schedule.scheduleId}" filterMatchMode="exact" headerText="Schedule ID" >
-                        <h:outputText value="#{schedule.scheduleId}" />
-                    </p:column>
-
-                    <p:column  headerText="startDate" filterBy="#{schedule.startDate}" filterMatchMode="contains">
-                        <p:cellEditor>
-                            <f:facet name="output"><h:outputText value="#{schedule.startDate}" /></f:facet>
-                            <f:facet name="input"><p:inputText value="#{sschedule.startDate}" style="width:100%" label="Description"/></f:facet>
-                        </p:cellEditor>
-                    </p:column>
-
-                    <p:column  headerText="endDate" filterBy="#{schedule.endDate}" filterMatchMode="contains">
-                        <p:cellEditor>
-                            <f:facet name="output"><h:outputText value="#{schedule.endDate}" /></f:facet>
-                            <f:facet name="input"><p:inputText value="#{schedule.endDate}" style="width:100%" label="Bin Type"/></f:facet>
-                        </p:cellEditor>
-                    </p:column>
-
-
-
-                    <p:column headerText = "Delete Schedule">
-                        <p:commandButton action="#{tAssetScheduleViewEditManagedBean.deleteAssetSchedule(schedule)}" update="scheduleData" value="Delete"  >
-                            <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this schedule?" icon="ui-icon-alert" />
-                        </p:commandButton> 
-                        <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-                            <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-                            <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-                        </p:confirmDialog>
-                    </p:column>
-
-                    <p:column style="width:32px">
-                        <p:rowEditor />
-                    </p:column>
-
-                </p:dataTable>
-                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-            </p:panel>
-        </h:form>
-    </h:body>
-</html>                 
 
